# XCSoar

./: .gitignore  AUTHORS  CMakeLists.txt  CMakeSource.cmake  CMakeXCSoar.py  NEWS.txt  Start-CMake-XCSoar.py  TaskList MSVC.md
Data/: XCSoar2.rc  XCSoarVS.rc
Data/Input/: default.xci
ide/docker/: README-aug.md
src/: CMakeSource.cmake  LogFile.cpp  Startup.cpp  UIActions.cpp  XCSoar.cpp
src/Airspace/: CMakeLists.txt
src/Atmosphere/: CMakeLists.txt
src/Cloud/: CMakeLists.txt  CMakeSource.cmake  IGCFileUpload.cpp  IGCFileUpload.hpp
src/Cloud/weglide/: FileToWeGlide.cpp  FileToWeGlide.hpp  WeGlideServer.cpp  WeGlideServer.hpp  WeGlideSettings.cpp  WeGlideSettings.hpp
src/Computer/: CMakeLists.txt  Settings.hpp
src/CrossSection/: TerrainXSRenderer.cpp
src/Device/: CMakeLists.txt  CMakeSource.cmake
src/Dialogs/: CMakeLists.txt  CMakeSource.cmake  DataField.cpp  DateEntry.cpp  DateEntry.hpp  FilePicker.cpp
src/Dialogs/Device/BlueFly/: BlueFlyConfigurationDialog.cpp
src/Dialogs/Plane/: PlaneDetailsDialog.cpp  PlaneListDialog.cpp
src/Dialogs/Settings/: dlgConfiguration.cpp
src/Dialogs/Settings/Panels/: WeGlideConfigPanel.cpp  WeGlideConfigPanel.hpp
src/Dialogs/Task/Manager/: TaskActionsPanel.cpp
src/Engine/: CMakeLists.txt  CMakeSource.cmake
src/Engine/PathSolvers/: Dijkstra.hpp
src/Engine/Task/Ordered/: OrderedTask.hpp
src/FLARM/: CMakeLists.txt  List.hpp
src/Form/: CMakeLists.txt  CMakeSource.cmake  DigitEntry.cpp  DigitEntry.hpp
src/Form/DataField/: Integer.hpp
src/Geo/: CMakeLists.txt
src/Hardware/: CMakeLists.txt
src/IGC/: CMakeLists.txt
src/InfoBoxes/: CMakeLists.txt
src/Input/: CMakeLists.txt  CMakeSource.cmake  InputEvents.hpp  InputEventsActions.cpp
src/JSON/: CMakeLists.txt  CMakeSource.cmake  JsonMapParser.cpp  JsonMapParser.hpp
src/Job/: CMakeLists.txt
src/Language/: CMakeLists.txt  CMakeSource.cmake
src/Logger/: CMakeLists.txt  CMakeSource.cmake  ExternalLogger.cpp
src/MapWindow/: CMakeLists.txt  GlueMapWindow.cpp
src/Markers/: CMakeLists.txt  CMakeSource.cmake
src/Menu/: CMakeLists.txt
src/Plane/: Plane.hpp  PlaneFileGlue.cpp  PlaneGlue.cpp
src/Profile/: CMakeSource.cmake  ComputerProfile.cpp  ProfileKeys.cpp  ProfileKeys.hpp
src/Projection/: CMakeLists.txt
src/Renderer/: AirspaceLabelList.hpp  CMakeLists.txt  WaypointLabelList.hpp
src/Replay/: CMakeLists.txt
src/Screen/: CMakeLists.txt  CMakeSource.cmake
src/Task/: LoadFile.cpp  TaskFileIGC.cpp  TaskFileSeeYou.cpp  ValidationErrorStrings.cpp  ValidationErrorStrings.hpp
src/TeamCode/: TeamCode.cpp
src/Terrain/: CMakeLists.txt  CMakeSource.cmake  Loader.cpp  RasterTileCache.cpp  jpc_rtc.cpp
src/Terrain/jasper/: CMakeLists.txt  CMakeSource.cmake  jas_config.h
src/Topography/: Thread.cpp  TopographyFile.cpp
src/Tracking/: CMakeLists.txt
src/Weather/: CMakeSource.cmake  METARParser.cpp
src/Widget/: CMakeLists.txt  CMakeSource.cmake  ProfileRowFormWidget.cpp
src/event/: CMakeLists.txt  CMakeSource.cmake  PollResultGeneric.hxx  WinSelectBackend.hxx  WinSelectEvents.hxx
src/io/: CMakeLists.txt  CMakeSource.cmake  FileDescriptor.hxx  StringConverter.hpp
src/json/: CMakeLists.txt  CMakeSource.cmake  Lookup.hxx  Reader.cpp  Reader.hpp
src/lua/: CMakeLists.txt  CMakeSource.cmake  Cloud.cpp  Cloud.hpp  Full.cpp
src/net/: CMakeLists.txt  CMakeSource.cmake  SocketAddress.hxx  SocketDescriptor.hxx
src/net/http/: Easy.hxx  Request.hxx  ToStream.cpp  UploadFile.cpp  UploadFile.hpp
src/system/: CMakeLists.txt  CMakeSource.cmake  EventPipe.cxx
src/thread/: CMakeSource.cmake  Thread.cpp
src/time/: BrokenDate.cpp  BrokenDate.hpp  CMakeSource.cmake  Convert.cxx
src/ui/: CMakeLists.txt  CMakeSource.cmake
src/ui/canvas/: Bitmap.hpp
src/ui/canvas/gdi/: Bitmap.cpp
src/ui/window/: TopWindow.hpp
src/util/: BindMethod.hxx  CMakeSource.cmake  Compiler.h  EnumBitSet.hxx  WStringAPI.hxx
src/zzip/: CMakeLists.txt  CMakeSource.cmake  _msvc.h
temp/data/: memory_fields.c
test/: CMakeLists.txt
test/data/: D-4449.xcp
test/src/: CMakeLists.txt  CMakeSource.cmake
tools/python/: bin2c.py
